ncmpc 0.28 - not yet released
* fix crash on lyrics screen
* fix memory leak
* hide the MPD password from the queue screen title
* build with Meson instead of autotools

ncmpc 0.27 - (2017-03-25)
* work around connect failure if /var/run/mpd/socket does not exist
* remove the status bar clock (option "display-time")
* fix assertion failure after connect failure
* several Windows build fixes

ncmpc 0.26 - (2017-03-20)
* require libmpdclient 2.9
* adapt to lirc 0.9.4
* lyricswiki: update regex
* screen_song: show "f" and "dsd" formats
* connect asynchronously
* fix flickering in color mode
* fix gcc 7 warnings

ncmpc 0.25 - (2016-08-18)
* implement "%disc%"
* lyricswiki: handle redirects
* lyricswiki: update XML format


ncmpc 0.24 - (2014-07-14)
* fix crash on "jump" (hotkey ".")
* save keys to path specified by --key-file


ncmpc 0.23 - (2014-07-10)
* fix broken l10n in out-of-tree builds


ncmpc 0.22 - (2014-06-09)
* rename "playlist" to "queue"
* remove useless "Connected to ..." message
* require libmpdclient 2.3, MPD 0.16
* patched color line-flags
* configuration option "search-format"
* remove broken leoslyrics plugin
* show audio format in song screen


ncmpc 0.21 - (2013-04-11)
* add a chat screen for communication with other clients on the same server
* song format: evaluate literal strings as true
* fix crash on search screen when disconnected
* screen_queue: fix crash on CMD_SCREEN_SWAP when the queue is empty
* lyricswiki: fix Ruby 2.0 and UTF-8


ncmpc 0.20 - (02/05/2012)
* increase connection timeout to 5 seconds
* screen_queue: follow songs when they are moved out of the visible
  range
* add a doxygen configuration file. Documentation will be generated if the
  configure script is called with --enable-documentation
* screen_lyrics: You can now edit lyrics by pressing 'e'
* configurable timeout for MPD connections
* screen_keydef: show command descriptions
* show the paths of the configuration files in --version output


ncmpc 0.19 - (07/23/2011)